<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/big_padding"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/activity_item"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="Description.."
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:textSize="18sp" />


            <TimePicker
                android:id="@+id/pickTime"
                style="@style/ThemeOverlay.MaterialComponents.TimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/choseColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_color" />

            <CheckBox
                android:id="@+id/repeatCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Repeat Daily" />


            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/button_save"
                android:textColor="@color/buttonLabel" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>