<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.chart.ChartFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/toolbar"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analytics"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chartCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

            <TextView
                android:id="@+id/chartHelperTv"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chart_helper"
                android:textSize="18sp"
                android:visibility="gone" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/activity_performance_chart"
                app:layout_constraintBottom_toTopOf="@id/adView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@id/pieChart"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>