<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.items.ItemFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="0dp"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolBar.Collapsed"
                app:contentScrim="#f0f0f0"
                app:expandedTitleMarginBottom="8dp"
                app:expandedTitleMarginStart="20dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolBar.Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:statusBarScrim="#f0f0f0">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:elevation="0dp"
                    app:layout_collapseMode="pin"
                    app:title="@string/todo" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
                tools:listitem="@layout/recycler_view_item" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noItemsCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/quoteTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="false"
                    android:text="@string/quote"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/noItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:singleLine="false"
                    android:text="@string/no_items_helper"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/no_items_helper"
            android:src="@drawable/ic_add"
            android:tint="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
